# Proyecto

./: .gitignore  .readthedocs.yaml  Licence  Readme.md  main.py  pyproject.toml  requeriments.txt  requirements.txt  tests.py
docs1/source/: Proyecto_python2.rst  conf.py  index.rst  modules.rst
src/: myemail.py
src/Proyecto_python2/: images.py  myemail.py
