[build-system]
requires = ["setuptools >= 65.5.0", "Pillow >= 10.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "Proyecto_python2"
version = "0.0.1"
description = "La biblioteca ayuda a trabajar con imagenes y enviar correos electrónicos"
authors = [{name="Saray Ramírez", email = "s.ary02@hotmail.com"}]
readme = "Readme.md"
requires-python = ">=3.10"


[project.urls]
"Homepage" = "https://github.com/sary1202/Proyecto"
